Modified css, about.html, post contents

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,6 +9,8 @@ layout: default
 			<p class="subtext">{{ page.description }}</p>
 		</div>
 	</div>
+	<div class="learn-more"><a href="#post">Read<span class="arrow">&#x25BC;</span></a></div>
 </section>
-
-{{ content }}
+<section id="post">
+	{{ content }}
+</section>
