--- a/_sass/staff.scss
+++ b/_sass/staff.scss
@@ -28,4 +28,16 @@
 		color: #666;
 		font-size: .8em;
 	}
+
+	.major {
+		margin-top: 1px;
+		color: #0B2161;
+		font-size: .688em;
+	}
+
+	.blurb {
+		color: #8A0808;
+		font-size: .688em;
+	}
+
 }
