--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: page
 	<div class="blog-post text-container">
 		<p class="editor-link"><a href="cloudcannon:collections/{{ page.path }}" class="btn"><strong>&#9998;</strong> Edit Post</a></p>
 		{% include post-title.html post=page %}
-		
+
 		<div class="post-content">
 			{{ content }}
 
@@ -29,24 +29,26 @@ layout: page
 
 
 			{% if site.disqus_shortname and page.comments %}
-				<div id="disqus_thread"></div>
-				<script>
-						var disqus_shortname = '{{ site.disqus_shortname }}';
-						var disqus_config = function () {
-								this.page.url = "{{ page.url | prepend: site.url }}";
-								this.page.identifier = "{{ page.id }}";
-						};
+			<div id="disqus_thread"></div>
+			<script>
 
-						(function() {  // DON'T EDIT BELOW THIS LINE
-								var d = document, s = d.createElement('script');
-
-								s.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-
-								s.setAttribute('data-timestamp', +new Date());
-								(d.head || d.body).appendChild(s);
-						})();
-				</script>
-				<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+			/**
+			*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+			*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+			/*
+			var disqus_config = function () {
+			this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+			this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+			};
+			*/
+			(function() { // DON'T EDIT BELOW THIS LINE
+			var d = document, s = d.createElement('script');
+			s.src = 'https://https-godsfingers-github-io.disqus.com/embed.js';
+			s.setAttribute('data-timestamp', +new Date());
+			(d.head || d.body).appendChild(s);
+			})();
+			</script>
+			<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 			{% endif %}
 		</div>
 	</div>
