Modified disqus comments

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,7 +28,7 @@ layout: page
 			</div>
 
 
-			{% if site.disqus_shortname and page.comments %}
+			{% if page.comments %}
 			<div id="disqus_thread"></div>
 			<script>
 
