Added Bootstrap & Modified css

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,12 @@
 
 <html lang="en">
 	<head>
+
+		<!-- Bottstrap -->
+		<link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap.min.css">
+		<link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap-theme.min.css">
+		<script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
+
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
