--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -18,9 +18,9 @@
 
 nav {
 	text-transform: uppercase;
-	font-size: .8em;
+	// font-size: .8em;
 	width: 100%;
-	position: relative;
+	// position: relative;
 	top: -7px;
 	text-shadow: none;
 
@@ -28,7 +28,6 @@ nav {
 		padding: 0 20px;
 		display: inline;
 	}
-
 
 	a {
 		margin: 0 3px;
